Fix mobile scroll: add overflow hidden to header

--- a/assets/css/email_signup.css
+++ b/assets/css/email_signup.css
@@ -4,6 +4,11 @@ html, body
     height: 100%;
 }
 
+header
+{
+    overflow: hidden;
+}
+
 main
 {
     display: flex;
